# fluent-fsm

./: Cargo.toml  LICENSE  README.md
examples/: stoplight.rs  turnstile.rs
src/: lib.rs  machine.rs  state_machine.rs  synchronous.rs
src/machine/: active.rs  builder.rs  passive.rs  traits.rs
