[package]
name = "fluent-fsm"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Wes Kelly"]
description = "A simple way to create a state machine"
homepage = "https://github.com/Xerxes004/fluent-fsm"
repository = "https://github.com/Xerxes004/fluent-fsm"
keywords = ["finite", "state", "machine", "fsm"]
categories = ["data-structures", "simulation", "concurrency", "asynchronous"]

[dev-dependencies]
prompted = "0.2"